--- a/BookShop/Views/Orders/Index.cshtml
+++ b/BookShop/Views/Orders/Index.cshtml
@@ -2,9 +2,10 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_LayoutSeller.cshtml";     
 }
 
-@*<table class="table">
+<table class="table">
     <thead>
         <tr>
             <th>
@@ -39,5 +40,4 @@
             </tr>
         }
     </tbody>
-</table>*@
-<h1>Helo</h1>
+</table>
