--- a/BookShop/Views/Shared/_LayoutSeller.cshtml
+++ b/BookShop/Views/Shared/_LayoutSeller.cshtml
@@ -42,7 +42,7 @@
                     </a>
                 </li>
                 <li>
-                    <a asp-controller="Orders" asp-action="Index">
+                    <a asp-controller="Seller" asp-action="Profile">
                         <span class="las la-clipboard-list"></span>
                         <span>Record Order</span>
                     </a>
