change to see orderdetail

--- a/BookShop/Views/Orders/Index.cshtml
+++ b/BookShop/Views/Orders/Index.cshtml
@@ -35,7 +35,7 @@
                     @Html.DisplayFor(modelItem => item.OrderDate)
                 </td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a asp-controller="OrderDetail" asp-action="Index" asp-route-id="@item.Id">Details</a>
                 </td>
             </tr>
         }
