--- a/BookShop/Views/Cart/Index.cshtml
+++ b/BookShop/Views/Cart/Index.cshtml
@@ -34,7 +34,7 @@
                         </tr>
                     </thead>
                     <tbody class="aligns-items-center justify-content-center">
-                        <form asp-controller="Orders" asp-action="Create">
+                        @*<form asp-controller="Orders" asp-action="Create">*@
                         @foreach (var item in Model)
                         {
                             <tr>
@@ -42,18 +42,24 @@
                                 <td class="text-center align-middle" style="width: 28%;">
                                     <img src="~/img/@item.Book.ImgUrl" class="img-thumbnail w-25" alt="...">
                                 </td>
-                                <td class="text-center align-middle" style="width: 10%;">
-                                    <div class="col-sm">
-                                        <input readonly type="number" name="@item.BookIsbn" value="@item.Quantity" class="fs-3 form-control text-center">
-                                    </div>
+                                
+                                <td>
+                                    <p>@item.Quantity</p>
                                 </td>
+                                
                                 <td class="text-center align-middle">$ @(item.Book.Price * item.Quantity) </td>
                                 <td class="text-center align-middle">
+                                    @*<input style= "display :none"  type="text" name="isbn" value="@item.BookIsbn" />
+                                  
+                                    <input type="submit" value="Update" class="btn btn-success fs-3">*@
+                                    <a class="btn btn-icon btn-hover btn-sm btn-rounded pull-right" asp-action="Edit" asp-route-uid="@item.UserId" asp-route-bid="@item.BookIsbn"> Edit</a>
+                                    
+                                    
                                     <a asp-action= "Remove" asp-route-Isbn = "@item.BookIsbn" class="btn btn-danger p-3 fs-3 fa-solid fa-trash-can"></a>
                                 </td>
                             </tr>
                         }
-                        </form>
+                        @*</form>*@
                     </tbody>
                 </table>
                  <div class="d-flex flex-row-reverse" style="margin-right: 4%;">
