--- a/BookShop/Views/Orders/Index.cshtml
+++ b/BookShop/Views/Orders/Index.cshtml
@@ -17,6 +17,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.OrderDate)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.User.Address)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -33,6 +36,9 @@
                 </td>
                  <td>
                     @Html.DisplayFor(modelItem => item.OrderDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.User.Address)
                 </td>
                 <td>
                     <a asp-controller="OrderDetail" asp-action="Index" asp-route-id="@item.Id">Details</a>
