--- a/BookShop/Views/Book/Search.cshtml
+++ b/BookShop/Views/Book/Search.cshtml
@@ -86,5 +86,7 @@
                 </li>
             </ul>
         </nav>
+        
+        <h1 class="pagination justify-content-center">Number of Book:@ViewBag.TotalBook</h1>
     </div>
 </div>
